--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/adapter-node": "^2.0.2",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"eventsource": "^2.0.2",
+		"socket.io": "^4.7.2",
+		"socket.io-client": "^4.7.2",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.6.0",
 		"typescript": "^5.0.0",
@@ -21,7 +25,6 @@
 	"type": "module",
 	"dependencies": {
 		"dateformat": "^5.0.3",
-		"eventsource": "^2.0.2",
 		"pocketbase": "^0.19.0"
 	}
 }
