--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"private": true,
 	"scripts": {
 		"dev": "vite dev",
-		"build": "vite build",
+		"build": "vite build && cp ./server/index.js ./src/lib/server/socket.js ./src/lib/server/database.js ./build",
+		"package": "./package.sh",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch"
@@ -14,7 +15,10 @@
 		"@sveltejs/adapter-node": "^2.0.2",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"dateformat": "^5.0.3",
 		"eventsource": "^2.0.2",
+		"express": "^4.18.2",
+		"pocketbase": "^0.21.0",
 		"socket.io": "^4.7.2",
 		"socket.io-client": "^4.7.2",
 		"svelte": "^4.0.5",
@@ -22,9 +26,5 @@
 		"typescript": "^5.0.0",
 		"vite": "^5.0.0"
 	},
-	"type": "module",
-	"dependencies": {
-		"dateformat": "^5.0.3",
-		"pocketbase": "^0.19.0"
-	}
+	"type": "module"
 }
