--- a/package.json
+++ b/package.json
@@ -10,17 +10,19 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch"
 	},
+	"dependencies": {
+		"express": "^4.18.2",
+		"pocketbase": "^0.21.0",
+		"eventsource": "^2.0.2",
+		"socket.io": "^4.7.2",
+		"socket.io-client": "^4.7.2"
+	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/adapter-node": "^2.0.2",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"dateformat": "^5.0.3",
-		"eventsource": "^2.0.2",
-		"express": "^4.18.2",
-		"pocketbase": "^0.21.0",
-		"socket.io": "^4.7.2",
-		"socket.io-client": "^4.7.2",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.6.0",
 		"typescript": "^5.0.0",
